--- a/modes/strongholdready/config/strongholdready.yaml
+++ b/modes/strongholdready/config/strongholdready.yaml
@@ -1,30 +1,30 @@
 #config_version=5
 mode:
-    start_events: multiball_lock_nightlock_locked_ball
-    stop_events: multiball_nightmb_started, ball_ending
+    start_events: multiball_lock_strongholdlock_locked_ball
+    stop_events: multiball_strongholdmb_started, ball_ending
     priority: 1000
 
 #play hurry up sound effect
 sound_player:
-  mode_nightready_started:
+  mode_strongholdready_started:
     heatbeat_music:
       action: play
       loops: -1
       track: music
       mode_end_action: stop
-    night_mode_ready:
+    stronghold_ready:
       action: play
       loops: 0
       priority: 100
       track: voice
  
 slides:
-  nightready_slide:
+  strongholdready_slide:
     widgets:
       - type: text
         font_name: lazer84
         font_size: 70
-        text: "Night Has Fallen"
+        text: "Stronghold Ready"
         anchor_x: center
         anchor_y: center
         y: center+75
@@ -48,4 +48,4 @@ slides:
               repeat: true   
 
 slide_player:
-  mode_nightready_started: nightready_slide
+  mode_strongholdready_started: strongholdready_slide
