Changed Night Mode to Nether Mode

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2370,8 +2370,11 @@ modes:
   - world5
   - theend
   - villagermb
-  - night
-  - nightready
+  - nether
+  - netherready
   - stronghold
   - strongholdready
+
+  # - night
+  # - nightready
 
