--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -10,6 +10,47 @@ shot_profiles:
       - name: lit
         show: on
 
+
+counters:
+  counter_villagermultiball:
+    count_events: spinner_hit
+    starting_count: 0
+    count_interval: 1
+    count_complete_value: 20
+    persist_state: true
+    restart_events: multiball_villagermb_ended
+    disable_events: villagermb_disable
+    enable_events: mode_worldcontroller_started
+
+  counter_nightmultiball:
+    count_events: popbumper1_hit, popbumper2_hit, popbumper3_hit
+    starting_count: 0
+    count_interval: 1
+    count_complete_value: 100
+    persist_state: true
+    restart_events: multiball_nightmb_ended
+    disable_events: nightmb_disable
+    enable_events: mode_worldcontroller_started    
+
+multiball_locks:
+  villagerlock:
+    balls_to_lock: 1
+    locked_ball_counting_strategy: physical_only
+    lock_devices: bd_topkicker 
+    enable_events: villagermultiball_ready
+    disable_events: villagermultiball_start, villagermb_disable
+
+
+multiballs:
+  villagermb:
+    ball_count: 2
+    ball_locks: bd_topkicker
+    enable_events: villagermultiball_ready
+    start_events: villagermultiball_start
+    shoot_again: 0s
+
+
+
 shots:
   collectitem1:
     switch: s_collectitem1
@@ -50,13 +91,28 @@ sound_player:
     villager_multiball_ready
 
 variable_player:
-  popbumper1_hit:
-    nightmb_progress: 1
-  popbumper2_hit:
-    nightmb_progress: 1
-  popbumper3_hit:
-    nightmb_progress: 1
+  multiball_villagermb_started: #VILLAGER MULTIBALL STARTED
+    multiplier_mb:
+      int: 2
+      action: set
+    villagermb_ready:
+      int: 0
+      action: set
 
+  multiball_villagermb_ended: #VILLAGER MULTIBALL ENDED
+    multiplier_mb:
+      int: 1
+      action: set
+
+  villagermb_disable:
+    villagermb_ready:
+      int: 0
+      action: set
+
+  villagermultiball_ready:
+    villagermb_ready:
+      int: 1
+      action: set
 
  #COLLECT ITEM 1 HIT
   collectitem1_hit:
@@ -281,3 +337,8 @@ event_player:
     collectitem4_disabled
 
 
+  #START VILLAGER MULTIBALL ON PLUNGE
+  sw_playfield_active_active{device.multiball_locks.villagerlock.locked_balls==1 and device.multiball_locks.villagerlock.enabled}:
+    villagermultiball_start
+
+ 
